--- a/css/main.css
+++ b/css/main.css
@@ -300,6 +300,22 @@ body.fullscreen-mode #game-container {
     min-height: 100dvh;
 }
 
+/* iOS Safari fullscreen fixes */
+@supports (-webkit-touch-callout: none) {
+    body.fullscreen-mode #game-container {
+        height: -webkit-fill-available;
+        min-height: -webkit-fill-available;
+    }
+}
+
+/* Prevent scroll bounce in fullscreen */
+body.fullscreen-mode {
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
 /* Show mobile buttons in fullscreen mode since header is hidden */
 body.fullscreen-mode .mobile-faction-btn,
 body.fullscreen-mode .mobile-fullscreen-btn {
